# puRposebot

./: Cargo.toml  README.md  restart.sh
src/: config.rs  db.rs  events.rs  main.rs
src/commands/: automod.rs  casino.rs  economy.rs  fishing.rs  giveaway.rs  help.rs  levels.rs  minigames.rs  missions.rs  mod.rs  moderation.rs  shop.rs  social.rs  utility.rs
src/lang/: de.rs  en.rs  mod.rs
