[package]
name = "idf-soldat"
version = "3.5.1"
edition = "2021"

[[bin]]
name = "idf-soldat"
path = "src/main.rs"

[dependencies]
poise = "0.6"
serenity = { version = "0.12", default-features = false, features = ["rustls_backend", "model", "collector", "cache"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
